--- a/CarCompanion/app/src/main/res/values/strings.xml
+++ b/CarCompanion/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <!-- Here are the strings we save to use elsewhere in our app -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome">Welcome to Car Companion!</string>
-    <string name="login">Sign in with Email</string>
+    <string name="login">Log in</string>
+    <string name="signup">Sign Up</string>
     <string name="use_as_guest">Use As Guest</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="next">Next</string>
