--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">CarCompanion</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
@@ -55,7 +55,7 @@
 
     <string name="sample_symptom_string">My car is producing a weird smell</string>
     <string name="sample_diagnosis_title">Faulty Ignition Coil</string>
-    <string name="sample_diagnosis_content">Ignition coils work to transfer ignition voltage so that the spark plugs can fire and the engine can start. Some common signs and symptoms of faulty ignition coils include a hard starting car, a car that frequently misfires, and a car that experiences poor acceleration or loses power. Faulty ignition coils usually don\'t present an immediate safety issue, but it's important to have the problem resolved before further engine damage has a chance to occur.</string>
     <string name="troubleshooting_return_button_text">Return to Troubleshooting</string>
+    <string name="sample_diagnosis_details">Ignition coils work to transfer ignition voltage so that the spark plugs can fire and the engine can start. Some common signs and symptoms of faulty ignition coils include a hard starting car, a car that frequently misfires, and a car that experiences poor acceleration or loses power. Faulty ignition coils usually don\'t present an immediate safety issue, but it\'s important to have the problem resolved before further engine damage has a chance to occur.t</string>
 
 </resources>
